Добавил изменения цвета SVG

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 	<title>Wi-Fi Radars</title>
 </head>
-
 <body>
 	<div class="wrapper">
 		<header>
@@ -49,11 +48,17 @@
 						<h1>Стоимость клика <span>растет,</span> количество лидов падает?</h1>
 						<p class="new-technologies">Догоняй рекламой тех, кто был рядом</p>
 						<button class="free-consultation">Получить бесплатную консультацию</button>
-						<button class="for-me white-button"><span><img src="img/svg/question-mark-white.svg"
-									alt=""></span> Подойдет
+						<button class="for-me white-button">
+							<span>
+								<svg viewBox="0 0 13 23" class="question-mark-white">
+									<use xlink:href="img/svg/sprite.svg#question-mark-white"></use>
+								</svg>
+
+							</span> Подойдет
 							ли для моего
 							бизнеса?</button>
 					</div>
+					
 					<picture>
 						<source srcset="img/webp/main-shop-1440.webp 1x, img/webp/main-shop-1440_2x.webp 2x"
 							data-srcset="img/placeholders/dummy-image-818x615.gif" media="(min-width: 1300px)">
@@ -323,8 +328,12 @@
 							</div>
 						</div>
 						<button class="card-button blue-button" data-modal="feedback">Хочу так же!</button>
-						<button class="about-case white-button"><span><img src="img/svg/question-mark-white.svg"
-									alt=""></span>Подробнее о
+						<button class="about-case white-button">
+							<span>
+								<svg viewBox="0 0 13 23" width="13" height="23">
+									<use xlink:href="img/svg/sprite.svg#question-mark-white"></use>
+								</svg>
+								</span>Подробнее о
 							кейсе</button>
 					</div>
 				</div>
@@ -493,9 +502,15 @@
 					</form>
 					<div class="form-another">
 						<p>Если вы не хотите ждать звонка — оставьте заявку тут:</p>
-						<img src="img/svg/tg-orb.svg" alt="">
-						<img src="img/svg/wa-orb.svg" alt="">
-						<img src="img/svg/vk-orb.svg" alt="">
+						<svg viewBox="0 0 80 80">
+							<use xlink:href="img/svg/sprite.svg#tg"></use>
+						</svg>
+						<svg viewBox="0 0 80 80"> 
+							<use xlink:href="img/svg/sprite.svg#wa"></use>
+						</svg>
+						<svg viewBox="0 0 80 80">
+							<use xlink:href="img/svg/sprite.svg#vk"></use>
+						</svg>
 					</div>
 				</div>
 			</section>
@@ -701,7 +716,9 @@
 					</div>
 
 				</div>
+				<div class="center">
 				<button class="accordion-button blue-button">Посмотреть все вопросы</button>
+				</div>
 			</section>
 
 			<section class="rent-for-business">
@@ -725,9 +742,16 @@
 					</form>
 					<div class="form-another rent-social">
 						<p>Если вы не хотите ждать звонка — оставьте заявку тут:</p>
-						<img src="img/svg/tg-orb.svg" alt="">
-						<img src="img/svg/wa-orb.svg" alt="">
-						<img src="img/svg/vk-orb.svg" alt="">
+						<svg viewBox="0 0 80 80">
+							<use xlink:href="img/svg/sprite.svg#tg"></use>
+						</svg>
+						<svg viewBox="0 0 80 80"> 
+							<use xlink:href="img/svg/sprite.svg#wa"></use>
+						</svg>
+						<svg viewBox="0 0 80 80">
+							<use xlink:href="img/svg/sprite.svg#vk"></use>
+						</svg>
+					</div>
 					</div>
 				</div>
 			</section>
@@ -860,9 +884,15 @@
 						</form>
 						<div class="form-another">
 							<p>Если вы не хотите ждать звонка — оставьте заявку тут:</p>
-							<img src="img/svg/tg-orb.svg" alt="">
-							<img src="img/svg/wa-orb.svg" alt="">
-							<img src="img/svg/vk-orb.svg" alt="">
+							<svg viewBox="0 0 80 80">
+								<use xlink:href="img/svg/sprite.svg#tg"></use>
+							</svg>
+							<svg viewBox="0 0 80 80"> 
+								<use xlink:href="img/svg/sprite.svg#wa"></use>
+							</svg>
+							<svg viewBox="0 0 80 80">
+								<use xlink:href="img/svg/sprite.svg#vk"></use>
+							</svg>
 						</div>
 					</div>
 					<button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап">
