--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 												<img class="vk_img" src="img/vk.png">
 											</label>
 										</div>
-										<input type="tel" name="tel" placeholder="+7 (999) 999-99-99" class="tel _req">
+										<input type="tel" name="tel" placeholder="+7 (999) 999-99-99" class="tel _req" >
 										<input type="submit" value="Отправить" class="btn_quiz">
 									</div>
 								</div>
@@ -485,13 +485,13 @@
 					</div>
 				</div>
 				<div class="form-wrapper">
-					<form action="#">
-						<input class="input-keybord" type="text" required name="username" id="input-username" placeholder="Имя">
-						<input class="input-keybord" type="tel" required name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+					<form action="#" id="form">
+						<input class="input-keybord _req" type="text"  name="username" id="input-username" placeholder="Имя">
+						<input class="input-keybord _req" type="tel"  name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
 							id="input-telephone" placeholder="Телефон" maxlength="10">
 						<div class="input-checkbox">
 							<label>
-								<input class="checkbox-input visually-hidden" type="checkbox" required>
+								<input class="checkbox-input visually-hidden" type="checkbox">
 								<span class="checkbox-use"></span>
 							</label>
 							<p>Я согласен с <a href="#">обработкой
@@ -725,13 +725,13 @@
 				<h2>Арендуйте <span>Wi-Fi радар</span> для вашего бизнеса!</h2>
 				<div class="rent-form">
 					<form action="#">
-						<input class="input-keybord" type="text" required name="username" id="input-username-last"
+						<input class="input-keybord" type="text" name="username" id="input-username-last"
 							placeholder="Имя">
-						<input class="input-keybord" type="tel" required name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+						<input class="input-keybord" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
 							id="input-telephone-last" placeholder="Телефон" maxlength="10">
 						<div class="last-checkbox input-checkbox">
 							<label>
-								<input class="checkbox-input visually-hidden" type="checkbox" required>
+								<input class="checkbox-input visually-hidden" type="checkbox">
 								<span class="checkbox-use"></span>
 							</label>
 							<p>Я согласен с <a href="#">обработкой
@@ -867,13 +867,13 @@
 					<div class="form-wrapper">
 						<h2 class="modal-audience-title">Хотите купить аудиторию</h2>
 						<form action="#">
-							<input class="input-keybord" type="text" required name="username" id="input-username"
+							<input class="input-keybord" type="text" name="username" id="input-username"
 								placeholder="Имя">
-							<input class="input-keybord" type="tel" required name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+							<input class="input-keybord" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
 								id="input-telephone" placeholder="Телефон" maxlength="10">
 							<div class="input-checkbox">
 								<label>
-									<input class="checkbox-input visually-hidden" type="checkbox" required>
+									<input class="checkbox-input visually-hidden" type="checkbox">
 									<span class="checkbox-use"></span>
 								</label>
 								<p>Я согласен с <a href="#">обработкой
